Fixed Tooltip Through z-Index. Project finalized

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,18 +107,9 @@ h1 {
   background: #CC0000;
   border: 0;
   border-radius: 10px;
+  z-index: 10000;
 }
 
 .img-thumbnail-xx {
  width: 100%;
-}
-
-.leaflet-popup-close-button {
-  display:none;
-}
-
-.leaflet-label-overlay {
-  line-height:0px;
-  margin-top: 9px;
-  position:absolute;
 }
